--- a/index.html
+++ b/index.html
@@ -336,9 +336,10 @@
         
             
             <div class="footer_tag">
-                <h2>Contact</h2>
-                <p><a href="tel:+09054849372">09054849372</a></p> <!-- Link to call the phone number -->
-                <p><a href="mailto:sweetscape@gmail.com">aujscangeliesaccuan@gmail.com</a></p> <!-- Link to send an email -->
+                <h2>Follow Us</h2>
+                <a href="https://www.facebook.com/angeliesaccuanx?mibextid=ZbWKwL" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="https://x.com/pootietoe?t=2Wu1Qj1C-zzA3BN3DACUzg&s=09" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://www.instagram.com/pooteitoe?igsh=ZXB0NXhhMjBoNGg4" target="_blank"><i class="fa-brands fa-instagram"></i></a>
             </div>            
 
             <div class="footer_tag">
