--- a/index.html
+++ b/index.html
@@ -338,12 +338,7 @@
             <div class="footer_tag">
                 <h2>Contact</h2>
                 <p><a href="tel:+09054849372">09054849372</a></p> <!-- Link to call the phone number -->
-                <div class="footer_tag">
-                    <h2>Contact</h2>
-                    <p><a href="tel:+09054849372">09054849372</a></p> <!-- Link to call the phone number -->
-                    <p><a href="mailto:aujscangeliesaccuan@gmail.com">sweetscape@gmail.com</a></p> <!-- Link to send an email -->
-                </div>
-                
+                <p><a href="mailto:aujscangeliesaccuan@gmail.com">sweetscapegmail.com</a></p> <!-- Link to send an email -->
             </div>            
 
             <div class="footer_tag">
