--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 </section>
 
 <!-- Best Seller section start here -->
+     <h1>Best Sellers</h1>
 <section class="best-seller" id="best-seller">
     <div class="best-seller-box">
         <!-- Best seller item 1 -->
